Footer alignment fix

--- a/resources/styles/footer/1024.less
+++ b/resources/styles/footer/1024.less
@@ -16,6 +16,6 @@ footer {
 		font-size:1.125em;
 	}
 	.logo-wrap {
-		padding-right:124px;
+		padding-right:164px;
 	}
 }
