--- a/resources/styles/footer/600.less
+++ b/resources/styles/footer/600.less
@@ -3,4 +3,16 @@ footer {
 		width:60%;
 		margin:40px auto;
 	}
+	.links {
+		ul {
+			display:inline-block;
+			text-align:left;
+			&:first-child {
+				margin-right:20px;
+			}
+		}
+		li {
+			max-width:200px;
+		}
+	}
 }
