--- a/resources/styles/footer/768.less
+++ b/resources/styles/footer/768.less
@@ -1,7 +1,7 @@
 footer {
 	text-align:left;
 	.footer-wrap {
-		padding:65px 70px;
+		padding:65px 40px;
 	}
 	.header, .links {
 		width:50%;
@@ -14,6 +14,7 @@ footer {
 			margin-right:30px;
 		}
 		li {
+			max-width:135px;
 			padding-bottom:15px;
 		}
 	}
