--- a/resources/styles/footer/base.less
+++ b/resources/styles/footer/base.less
@@ -38,15 +38,10 @@ footer {
 	.links {
 		margin-top:80px;
 		ul {
-			display:inline-block;
 			list-style:none;
 			padding:0;
 			margin:0;
 			vertical-align:top;
-			text-align:left;
-			&:first-child {
-				margin-right:20px;
-			}
 		}
 		li {
 			padding-bottom:10px;
