--- a/resources/styles/modules/768.less
+++ b/resources/styles/modules/768.less
@@ -1,7 +1,7 @@
 .single-header {
 	h1 {
 		&.small-font {
-			font-size:inherit;
+			font-size:3em;
 		}
 	}
 }
